fix layout issues, mainly margins and centering

--- a/app/css/lightsout.css
+++ b/app/css/lightsout.css
@@ -57,7 +57,6 @@ h5.card-title {
   .row { margin-left: 0rem; margin-right: 0rem; }
   .col-lg-12 { padding-right: 0.25rem; padding-left: 0.25rem; }
   .form-group.col-md-6 { margin-left: -0.5rem; }
-  .js-wifi-stations { margin-left: -0.5rem; margin-right: -0.5rem; }
   h4.mt-3 { margin-left: 0.5rem; }
 }
 
